# tree-sitter-varlink

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  full.txt  names.txt  whitespace.txt
test/highlight/: test.varlink
test/tags/: test.varlink
