[package]
name = "tree-sitter-varlink"
description = "Varlink grammar for tree-sitter"
version = "0.2.0"
authors = ["Pascal Bachor"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "varlink"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/bachorp/tree-sitter-varlink"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
